syntax = "proto3";

package spine.server.catchup;

import "spine/options.proto";
import "spine/time_options.proto";

option (type_url_prefix) = "type.spine.io";
option (internal_all) = true;
option (every_is).java_type = "io.spine.server.delivery.CatchUpSignal";

option java_package = "io.spine.server.catchup.command";
option java_outer_classname = "CatchUpCommandsProto";
option java_multiple_files = true;

import "spine/server/catchup/catch_up.proto";

// Tells the ongoing catch-up process to read more events from the event log and send those to
// the respective target inboxes.
//
message RecallMoreHistoryEvents {

    CatchUpId id = 1;
}

// Tells to start finalizing the catch-up process.
//
message FinalizeCatchUp {

    CatchUpId id = 1;
}

